# arithma

./: .gitignore  404.html  Cargo.toml  LICENSE  first_steps.html  index.html  print.html  readme.md  rustfmt.toml  searcher-c2a407aa.js  searchindex-7522a5b2.js  syntax.html  toc-c16765e9.js  toc.html
.github/workflows/: deploy.yml
arithma-language-support/: README.md  arithma-language-support-0.0.1.vsix  language-configuration.json  package.json
arithma-language-support/syntaxes/: arithma.tmLanguage.json
book/: book.toml
book/src/: SUMMARY.md  first_steps.md  introduction.md  syntax.md
book/theme/: arithma.js  arithma.tmLanguage.json
src/: ast.rs  error.rs  interpreter.rs  lib.rs  main.rs  util.rs
src/error/: parse_error.rs  runtime_error.rs
src/interpreter/: evaluator.rs  lexer.rs  parser.rs  value.rs
src/interpreter/evaluator/: binary.rs  core.rs  for_loop.rs  function.rs  unary.rs  utils.rs
src/interpreter/evaluator/binary/: array.rs  comparison.rs  core.rs  logic.rs  matmul.rs  power.rs  scalar.rs  set.rs
src/interpreter/evaluator/function/: builtin.rs  choose.rs  clamp.rs  conj.rs  core.rs  log.rs  min_max.rs  print.rs  sqrt.rs  transpose.rs  trunc.rs
src/interpreter/parser/: binary.rs  block.rs  core.rs  statement.rs  unary.rs  utils.rs
src/interpreter/value/: complex.rs  core.rs  set_value.rs
src/util/: num.rs
tests/: example.math  language.rs
theme/: arithma-de0cb104.css
